# jovi-jovi

./: Cargo.toml  README.md  index.html  jovijovi-4a0942bd3005e035.js  jovijovi-4a0942bd3005e035_bg.wasm  jovijovi-4e4ee773ab585672.js  jovijovi-4e4ee773ab585672_bg.wasm  jovijovi-8f84763dab9901ce.js  jovijovi-8f84763dab9901ce_bg.wasm  jovijovi-e5ad7f6cc4bf1359.js  jovijovi-e5ad7f6cc4bf1359_bg.wasm  style.scss
.github/workflows/: pages.yml
src/: main.rs  utils.rs
src/components/: app.rs  button.rs  hooks.rs  init.rs  mod.rs
src/models/: mod.rs  voice.rs
