[package]
name = "jovijovi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-logger = "0.2.0"
log = "0.4.6"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
gloo-utils = "0.1.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'AnalyserNode',
  'GainNode',
  'HtmlAudioElement',
  'HtmlCanvasElement',
  'MediaElementAudioSourceNode',
  'CanvasRenderingContext2d',
]
